Updating application configs

--- a/study-go-kotlin-spring-boot/src/main/resources/application.properties
+++ b/study-go-kotlin-spring-boot/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=first-sprint-app
-sprint.datasource.url=jdbc:h2:mom:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+sprint.datasource.url=jdbc:postgresql://localhost:3306/kotlin_studies
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.PostgresSQLDialect
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
