--- a/study-go-kotlin-spring-boot/pom.xml
+++ b/study-go-kotlin-spring-boot/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.eduardo</groupId>
-	<artifactId>study-go-kotlin-spring-boot</artifactId>
+	<artifactId>study-kotlin-spring-boot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>study-go-kotlin-spring-boot</name>
 	<description>My first Kotlin Spring Boot app</description>
@@ -31,6 +31,10 @@
 		<kotlin.version>1.9.25</kotlin.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
