--- a/study-kotlin-spring-boot/src/main/resources/application.yml
+++ b/study-kotlin-spring-boot/src/main/resources/application.yml
@@ -1,50 +1,3 @@
 spring:
-  application:
-    name: first-sprint-app
-
-  datasource:
-    url: jdbc:postgresql://localhost:3306/kotlin_studies
-    username: postgres
-    password: 1234
-    driver-class-name: org.postgresql.Driver
-
-  # Flyway properties
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
-
-  jpa:
-    # Enable generation of DDL scripts. Use only when having new entities or changes in the schema.
-    generate-ddl: false
-
-    # Specify the database dialect explicitly (recommended)
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-    # For debugging SQL
-#    show-sql: true
-#    format_sql: true
-
-    hibernate:
-      hbm2ddl:
-        # Tell Hibernate to generate DDL scripts but NOT apply them to the database
-        ddl-auto: none
-
-    properties:
-      javax:
-        persistence:
-          schema-generation:
-            scripts:
-              # Specify the action Hibernate should take regarding scripts: create, drop, none, or drop-and-create
-              action: drop-and-create
-              # Path where the create script will be generated (relative to project root or absolute)
-              create-target: src/main/resources/schema.sql
-              # Optional: generate drop script as well
-              drop-target: src/main/resources/drop-schema.sql
-
-jwt:
-  # SHA-256 needs at least 256 bits
-  secret: 220067b0-ddf3-4035-88ef-b0e984aefb9b
-
-# Hikari debugging settings
-#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
-#logging.level.com.zaxxer.hikari=TRACE
+  profiles:
+    active: @activatedProperties@
