--- a/study-kotlin-spring-boot/src/main/resources/application-dev-docker.yml
+++ b/study-kotlin-spring-boot/src/main/resources/application-dev-docker.yml
@@ -2,6 +2,11 @@ spring:
   application:
     name: forum-app-dev
 
+  devtools:
+    livereload:
+      enabled:
+        true
+
   datasource:
     url: jdbc:postgresql://192.168.1.12:3306/kotlin_studies
     username: postgres
