--- a/study-kotlin-spring-boot/docker-compose.yml
+++ b/study-kotlin-spring-boot/docker-compose.yml
@@ -1,21 +1,45 @@
-version: '3.8'
-
 x-docker-base: &docker-base
-  build: .
+  build:
+    context: .
+    dockerfile: Dockerfile
   ports:
     - "8080:8080"
   environment:
-    - JAVA_OPTS=-Xms1g -Xmx3g
+    - JAVA_OPTS=-Xms1g -Xmx3g -XX:CICompilerCount=2
+
 services:
+  mysql:
+    image: mysql:8.4.6
+    environment:
+      MYSQL_ROOT_USERNAME: root
+      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_PASSWORD: 1234
+      MYSQL_DATABASE: kotlin_studies
+    ports:
+      - "3306:3306"
+    command: --require_secure_transport=OFF
+
   dev:
     <<: *docker-base
-    restart: always
+    depends_on:
+      - mysql
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /src
+    ports:
+      - "8080:8080"
     environment:
-      - JAVA_OPTS=Xms1g -Xmx3g -Dspring.devtools.restart.enabled=true -Dspring.devtools.livereload.enabled=true -XX:CICompilerCount=2
+      - JAVA_OPTS=-Xms1g -Xmx3g -Dspring.devtools.restart.enabled=true -Dspring.devtools.livereload.enabled=true -XX:CICompilerCount=2
       - SPRING_ACTIVE_PROFILE=dev-docker
+      - DB_NAME=kotlin_studies
+      - DB_USERNAME=root
+      - DB_PASSWORD=1234
+      - DB_HOST=mysql
+      - DB_PORT=3306
 
   prd:
     <<: *docker-base
     environment:
-      - JAVA_OPTS=Xms1g -Xmx3g -XX:CICompilerCount=2
       - SPRING_ACTIVE_PROFILE=prd
