--- a/study-kotlin-spring-boot/pom.xml
+++ b/study-kotlin-spring-boot/pom.xml
@@ -28,9 +28,11 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<kotlin.version>2.1.21</kotlin.version>
-		<spring.version>4.0.0-M2</spring.version>
+		<kotlin.version>2.2.20</kotlin.version>
+		<spring.version>4.0.0-M3</spring.version>
 		<jjwt.version>0.12.6</jjwt.version>
+        <mockk.version>1.14.6</mockk.version>
+        <assertj.version>4.0.0-M1</assertj.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -95,11 +97,12 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-reflect</artifactId>
-			<version>2.1.21</version>
+			<version>${kotlin.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
+			<version>${kotlin.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -123,6 +126,18 @@
 			<artifactId>kotlin-test-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk-jvm</artifactId>
+            <version>${mockk.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -180,6 +195,11 @@
 		</plugins>
 	</build>
 	<repositories>
+		<repository>
+			<id>central</id>
+			<name>Maven Central</name>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
