--- a/study-kotlin-spring-boot/pom.xml
+++ b/study-kotlin-spring-boot/pom.xml
@@ -33,7 +33,21 @@
 		<jjwt.version>0.12.6</jjwt.version>
         <mockk.version>1.14.6</mockk.version>
         <assertj.version>4.0.0-M1</assertj.version>
+        <testcontainers.version>2.0.1</testcontainers.version>
+        <testcontainers.mysql.version>1.21.3</testcontainers.mysql.version>
+        <testcontainers.junit-jupiter.version>1.21.3</testcontainers.junit-jupiter.version>
 	</properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainers.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
@@ -143,6 +157,22 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.9</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-mysql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
